_sass/components/_list-speaker.scss
.list-speaker {
  $photo-size-lg: 200px;

  @include media-breakpoint-up('md') {
    @include make-row();
  }

  &__item {
    @include media-breakpoint-down('md') {
      &:not(:last-child) {
        margin-bottom: rem(50px);
      }
    }

    @include media-breakpoint-up('md') {
      @include make-col-ready();
      @include make-col(6);
    }
  }

  &__profile {
    position: relative;

    @include media-breakpoint-up('lg') {
      display: flex;
      flex-wrap: wrap;
    }
  }

  &__photo {
    width: 100%;

    @include media-breakpoint-up('lg') {
      width: $photo-size-lg;
      height: 100%;
      order: 0;
    }
  }

  &__tag {
    display: inline-block;
    position: absolute;
    top: 0;
    left: 0;
    z-index: map-get($zIndex, 'high');

    width: rem(100px);
    height: rem(36px);
    line-height: rem(36px);
    padding: 0 10px;

    font-size: 1rem;
    text-transform: uppercase;
    font-weight: 600;
    color: #fff;

    background: map-get($color-brand, 'primary');
  }

  &__name {
    font-size: rem(25px);

    @include media-breakpoint-only('md') {
      font-size: map-get($font-sizes, 'lg');
    }

    @include media-breakpoint-up('lg') {
      flex: 100% 0 0;
      order: 2;
    }
  }

  &__link {
    font-size: map-get($font-sizes, 'lg');

    @include media-breakpoint-only('md') {
      font-size: map-get($font-sizes, 'default');
    }

    @include media-breakpoint-up('lg') {
      flex: 100% 0 0;
      order: 2;

      line-height: 1;
    }
  }

  &__bio {
    position: relative;

    margin-bottom: 0;
    padding-top: rem(40px);

    @include media-breakpoint-up('lg') {
      order: 1;

      width: calc(100% - #{$photo-size-lg});
      max-height: rem(200px);
      padding: rem(12px);

      overflow: hidden;

      font-size: rem(13px);

      border: 2px solid map-get($color-gray, 'primary');
      border-left: none;
    }

    &:before {
      content: '';
      position: absolute;
      background: $body-color;

      // Thin black line separating the bio from the speaker name + Twitter handle
      @include media-breakpoint-down('md') {
        top: 20px;

        width: 100%;
        height: 1px;
      }

      // Thin black line filling in the gaps between the rounded corner of the photo
      // and the rectangle for teh bio
      @include media-breakpoint-up('lg') {
        top: -2px;
        left: -2px;
        z-index: map-get($zIndex, 'behind');

        width: 2px;
        height: calc(100% + 4px);
      }
    }

    a {
      @extend .link--secondary;

      text-decoration: underline;
    }
  }
}

